deployMultipleVMs/azuredeploy.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "vmName": {
            "type": "string",
            "defaultValue": "GridNode",
            "minLength": 1
        },
        "adminUsername": {
            "type": "string",
            "defaultValue": "gridadmin",
            "minLength": 1
        },
        "adminPassword": {
          "type": "securestring",
          "defaultValue": "[concat('Subscription#', subscription().subscriptionId)]"
        },
        "imageSku": {
            "type": "string",
            "defaultValue": "2012-R2-Datacenter",
            "allowedValues": [
                "2012-R2-Datacenter",
                "2016-Datacenter"
            ]
        },
        "storageAccountType": {
            "type": "string",
            "defaultValue": "Standard_LRS",
            "allowedValues": [
                "Standard_LRS",
                "Premium_LRS"
            ]
        },
        "vmCount": {
            "type": "int",
            "defaultValue": 5,
            "metadata": {
                "description": "Number of Windows VMs to create."
            }
        },
        "vmSize": {
            "type": "string",
            "defaultValue": "Standard_DS1_v2",
            "allowedValues": [
                "Standard_DS1_v2",
                "Standard_DS3_v2",
                "Standard_A8",
                "Standard_A9",
                "Standard_A10",
                "Standard_E32S_V3"
            ]
        }
    },
    "variables": {
        "imagePublisher": "MicrosoftWindowsServer",
        "imageOffer": "WindowsServer",
        "osDiskName": "osDisk",
        "nsgName": "gridNSG",
        "vnetID": "[resourceId('Microsoft.Network/virtualNetworks', 'vNet')]",
        "subnetRef": "[concat(variables('vnetID'), '/subnets/', variables('virtualnetworkSubnetName'))]",
        "vmStorageAccountContainerName": "vhds",
        "nicName": "[concat(parameters('vmName'), 'NetworkInterface')]",
        "virtualnetworkPrefix": "10.0.0.0/16",
        "virtualnetworkSubnetName": "Subnet-1",
        "virtualnetworkSubnetPrefix": "10.0.0.0/24",
        "storageAccountName": "[concat('sa', uniqueString(resourceGroup().id))]"
    },
    "resources": [
        {
            "name": "[concat(variables('nicName'),copyIndex())]",
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/networkInterfaces",
            "location": "[resourceGroup().location]",
            "copy": {
                "name": "NicCopy",
                "count": "[parameters('vmCount')]"
            },
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/','vNet')]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ip",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(parameters('vmName'), copyIndex())]",
            "type": "Microsoft.Compute/virtualMachines",
            "location": "[resourceGroup().location]",
            "apiVersion": "2015-06-15",
            "copy": {
                "name": "VmCopy",
                "count": "[parameters('vmCount')]"
            },
            "dependsOn": [
                "[concat('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))]",
                "[concat('Microsoft.Network/networkInterfaces/', variables('nicName'), copyIndex())]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('vmSize')]"
                },
                "osProfile": {
                    "computerName": "[parameters('vmName')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[variables('imagePublisher')]",
                        "offer": "[variables('imageOffer')]",
                        "sku": "[parameters('imageSku')]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "osdisk",
                        "vhd": {
                            "uri": "[concat(reference(concat('Microsoft.Storage/storageAccounts/', variables('storageAccountName')),providers('Microsoft.Storage', 'storageAccounts').apiVersions[0]).primaryEndpoints.blob,variables('vmStorageAccountContainerName'),'/',concat(variables('osDiskName'),copyIndex()),'.vhd')]"
                        },
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('nicName'),copyIndex()))]"
                        }
                    ]
                }
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('nsgName')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "NSG"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-rdp",
                        "properties": {
                            "description": "Allow RDP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "[variables('virtualnetworkSubnetPrefix')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-ds_fs",
                        "properties": {
                            "description": "Allow DS",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "27159",
                            "sourceAddressPrefix": "[variables('virtualnetworkSubnetPrefix')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "vNet",
            "type": "Microsoft.Network/virtualNetworks",
            "location": "[resourceGroup().location]",
            "apiVersion": "2017-06-01",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('nsgName'))]"
            ],
            "tags": {
                "displayName": "vNet"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('virtualnetworkPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('virtualnetworkSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('virtualnetworkSubnetPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('storageAccountName')]",
            "type": "Microsoft.Storage/storageAccounts",
            "location": "[resourceGroup().location]",
            "apiVersion": "2015-06-15",
            "dependsOn": [],
            "tags": {
                "displayName": "sa"
            },
            "properties": {
                "accountType": "[parameters('storageAccountType')]"
            }
        }
    ]
}
